Initial styling of navbar.

--- a/apps/frontend/src/styles/vars.scss
+++ b/apps/frontend/src/styles/vars.scss
@@ -1,2 +1,10 @@
 // Colors.
 $primary-background-color: #50505a;
+
+// Sizes and dimensions.
+$navbar-height: 9rem;
+
+// Font styles.
+$logo-font: 'Great Vibes', cursive;
+$menu-font: 'Abel', sans-serif;
+$font-size-desktop: 2.6rem;
