Responsive changes for navbar.

--- a/apps/frontend/src/styles/vars.scss
+++ b/apps/frontend/src/styles/vars.scss
@@ -3,7 +3,8 @@ $primary-background-color: #252a30;
 $shadow-color: #111;
 
 // Navbar styles.
-$navbar-height: 7rem;
+$navbar-desktop-height: 7rem;
+$navbar-mobile-height: 5rem;
 $navbar-font-size: 2.2rem;
 $navbar-primary-color: #b9b9b9;
 $navlink-color: #7ba4c6;
