Improved on navbar transparency styling.

--- a/apps/frontend/src/styles/vars.scss
+++ b/apps/frontend/src/styles/vars.scss
@@ -1,5 +1,6 @@
 // Colors.
-$primary-background-color: #252a30;
+$primary-background-color: rgba(37, 42, 48, 1);
+$transparent-primary-background-color: rgba(37, 42, 48, 0.8);
 $primary-font-color: #b9b9b9;
 $shadow-color: black;
 
