Harmonized handwritten font styling.

--- a/apps/frontend/src/styles/vars.scss
+++ b/apps/frontend/src/styles/vars.scss
@@ -14,8 +14,7 @@ $navlink-active-color: #52c5e1;
 $navlink-hover-color: #a6c4db;
 
 // Font styles.
-$handwriting-font: 'Hurricane', cursive;
-$logo-font: 'Great Vibes', cursive;
+$handwriting-font: 'Allura', cursive;
 $menu-font: 'Abel', sans-serif;
 $font-size-desktop: 2.6rem;
 
