Fixed rendering of videos in albums as well.

--- a/apps/frontend/src/styles/vars.scss
+++ b/apps/frontend/src/styles/vars.scss
@@ -3,6 +3,7 @@ $primary-background-color: rgba(37, 42, 48, 1);
 $transparent-primary-background-color: rgba(37, 42, 48, 0.8);
 $primary-font-color: #b9b9b9;
 $shadow-color: black;
+$frame-color: #666;
 
 // Navbar styles.
 $navbar-desktop-height: 7rem;
