CSS fixes for mobile.

--- a/apps/frontend/src/styles/vars.scss
+++ b/apps/frontend/src/styles/vars.scss
@@ -9,6 +9,7 @@ $frame-color: #666;
 $navbar-desktop-height: 7rem;
 $navbar-mobile-height: 5rem;
 $navbar-font-size: 2.2rem;
+$navbar-font-size-mobile: 1.8rem;
 $navbar-primary-color: #b9b9b9;
 $navlink-color: #7ba4c6;
 $navlink-active-color: #52c5e1;
